# mcp-rustdesk

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yml
headless/: apply.ps1  apply.sh  headless.rs  lib.rs.patch
mcp-server/: pyproject.toml  requirements.txt  server.py
